<resources>
    <string name="app_name">Owl Mail</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="draft">Drafts</string>
    <string name="junk">Junk</string>
    <string name="trash">Trash</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="switch_theme">Switch theme</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_roll">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="attachments">Attachments</string>
    <string name="compose">Compose</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="about_us">About us</string>
    <string name="new_features">New features</string>
    <string name="terms_conditions">Terms &amp; conditions</string>
    <string name="all_mails">All mails</string>
    <string name="calendar">Calendar</string>
    <string name="contacts">Contacts</string>
    <string name="tasks">Tasks</string>
    <string name="unknown_error">Something went wrong!</string>
    <string name="null_error">Null value was found!</string>
    <string name="mail_url">Enter mail URL</string>
    <string name="next">Next</string>

    <string name="database_name">MAIL_DB</string>
    <string name="data_store_name">MAIL_CREDENTIAL</string>
    <string name="key_username">KEY_USERNAME</string>
    <string name="key_password">KEY_PASSWORD</string>
    <string name="key_auth_token">KEY_AUTH_TOKEN</string>
    <string name="key_auth_token_expire_time">KEY_AUTH_TOKEN_EXPIRE_TIME</string>
    <string name="key_url">KEY_URL</string>
    <string name="key_should_sync">KEY_SYNC_SERVICE</string>
    <string name="key_dark_theme">KEY_DARK_THEME</string>
    <string name="key_analytics">KEY_ANALYTICS</string>

    <string name="year_format">MMMM yyyy</string>
    <string name="month_format">dd MMM</string>
    <string name="day_format">hh:mm a</string>
    <string name="full_date_format">hh:mm a dd MMM yyyy</string>
    <string name="zimbra_date_format">EEEE, MMMM dd, yyyy HH:mm a</string>
    <string name="zimbra_month_format">MM/dd/yyyy</string>

    <string name="notification_id">NITR Mail Notification Sync</string>
    <string name="notification_channel">NITR Mail Notification</string>

    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>